# workspace

./: README.md  worklog.org
c/000_autotools_templates/001_AUTOTOOLS_GTK3_TEMPLATE/: autogen.sh
c/000_autotools_templates/002_AUTOTOOLS_GLIB_TEMPLATE/: autogen.sh
c/_gdbinit/: debug_glib2_gdbinit  debug_libc_gdbinit  home_seba_gdbinit
c/practical_c_programming_feb_2020/: practical_c_programming_feb_2020.org
c/practical_c_programming_feb_2020/ch01/: .gitignore  autotools.sh  callmake.sh  config.h  configure.ac
c/practical_c_programming_feb_2020/ch01/src/: Makefile.am  hello.c  insertinarray.c
